Details
- 
    Bug 
- 
    Resolution: Fixed
- 
    Minor 
- 
        0.4.16-dev-773-gf1a66da https://github.com/reactos/reactos/commit/f1a66daeeb474d81ec7e4b486f5f341b91ee3c16
Description
ReactOS version: reactos-0.4.16-dev-1521-gb8f1da6-x64-msvc-win-dbg
Type: Regression (x64 only)
Description: In current master x64, as soon as you open a folder, the Shell32 decides to select every single file into a folder except one. Seems a behavior that is not offending the x86 builds.
Guilty commit: reactos-livecd-0.4.16-dev-773-gf1a66da-x64-msvc-win-dbg by whindsaks - https://github.com/reactos/reactos/commit/f1a66daeeb474d81ec7e4b486f5f341b91ee3c16 [SHELL32] Display cut items as ghosted (#7739)
Screenshot:
Preguilty:
output1.gif
Postguilty:
output2.gif
Attachments
Issue Links
- blocks
- 
                    CORE-9465 Cut files aren't dimmed -         
- Resolved
 
-         

