[SHELL32] Only set state flag if state is set on items in DefView list (#8259)

CORE-20273